<resources>
    <string name="app_name">TalkerM</string>

    <string name="intro">TalkerM Starting\n\n</string>
    <string name="action_settings">Settings</string>
    <string name="package_name">com.example.aaron.talkerm</string>
    <string name="scan_button"> Scan </string>
    <string name="connect_button">Find a Connection</string>
    <string name="flash">Flash</string>
    <string name="beep">Beep</string>
    <string name="shake">Shake</string>
</resources>
