<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/relativeLayout">


    <TextView android:text="@string/intro"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scrollbars="vertical"
        android:id="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="84dp"
        android:singleLine="true"
        android:text="@string/scan_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="187dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="84dp"
        android:singleLine="true"
        android:text="@string/connect_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scan_button"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_flash"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="45dp"
        android:layout_marginStart="32dp"
        android:text="@string/flash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_beep"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/beep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_shake"
        app:layout_constraintStart_toEndOf="@+id/button_flash" />

    <Button
        android:id="@+id/button_shake"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="32dp"
        android:text="@string/shake"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
